--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,14 @@
 h1{
     color:blue
 }
+.row {
+    white-space: pre-wrap;
+    height: 80px;
+    border-top: 1px solid white;;
+  }
+  .column{
+      column-count: 2;
+      width: fit-content;
+      position: relative;
+      justify-content: space-between;
+  }
