Added change in price color to marquee  value

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,3 +50,16 @@ html {
   -o-background-size: cover;
   background-size: cover;
 } 
+marquee {
+    font-size: large;
+    color: rgb(255, 188, 4);
+}
+.positiveChange {
+    color:green;
+}
+.negativeChange {
+    color:red;
+}
+.neutralChange {
+    color:gray;
+}
