Added rest of the ticker elements with 1h and 24h changes

--- a/assets/style.css
+++ b/assets/style.css
@@ -61,6 +61,8 @@ marquee {
 }
 marquee h3 {
     display:inline-flex;
+    margin-left: 5px;
+    margin-right:10px;
 }
 #dogeTicker {
     height: auto;
