--- a/assets/style.css
+++ b/assets/style.css
@@ -80,3 +80,12 @@ html {
 .neutralChange {
     color:gray;
 }
+.column {
+    column-count: 4;
+}
+#twitterContainer {
+    font-size: 1.5vw;
+}
+#twitterHeaderIcon{
+    padding: 5px
+}
