--- a/assets/style.css
+++ b/assets/style.css
@@ -50,3 +50,46 @@ html {
   -o-background-size: cover;
   background-size: cover;
 } 
+#marquee1 {
+    font-size: large;
+    color: rgb(255, 188, 4);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+}
+#marquee1 h3 {
+    display:inline-flex;
+    margin-left: 5px;
+    margin-right:10px;
+}
+#dogeTicker {
+    height: auto;
+    width: 25px;
+    vertical-align: middle;
+    border-radius: 5px;
+    margin: 5px;
+}
+.positiveChange {
+    color:green;
+}
+.negativeChange {
+    color:red;
+}
+.neutralChange {
+    color:gray;
+}
+.column {
+    column-count: 4;
+    padding: 0px;
+}
+#marquee2 .card {
+    margin-bottom: 20px;
+}
+#twitterContainer {
+    font-size: 1.5vw;
+}
+#twitterHeaderIcon{
+    padding: 5px
+}
