--- a/assets/style.css
+++ b/assets/style.css
@@ -38,13 +38,13 @@ p{
       justify-content: space-between;
   }
 .begin{
-    color: white;
+    color:black;
     padding: 15px 32px;
     display: block;
     text-align: center;
     font-size: 16px;
     margin:auto;
-    background-color: green;
+    background-color:gold;
     border: 2px solid black;
 }
 
