--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,9 @@ html {
 }
 #twitterHeaderIcon{
     padding: 5px
-h2{
-    color: #fff;
-    text-align: left;
+}
+.asideContainer p{
+    color: black;
+    
+
 }
