--- a/assets/style.css
+++ b/assets/style.css
@@ -45,17 +45,19 @@ p {
   background-color: gold;
   border: 2px solid black;
 }
-.btn-group button {
-  background-color: gold;
-  border: 2px solid black;
-  display: table-row;
-  text-align: center;
-  font-size: 16px;
-  margin: auto;
-}
 
 .begin:hover {
   background: blue;
+}
+.btn {
+  background-color: gold;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: solid;
+  display: inline-block;
+  font-size: 20px;
 }
 .center {
   margin: 0 auto;
