--- a/assets/style.css
+++ b/assets/style.css
@@ -127,3 +127,29 @@ html {
 .asideContainer p{
     color: black;
 }
+
+.shopbtn{
+  color: black;
+  padding: 15px 32px;
+  display: inline-block;
+  font-size: 16px;
+  margin: auto;
+  background-color: gold;
+  border: 2px solid black;
+  vertical-align: middle;
+  
+}
+.convertbtn{
+  color: black;
+  padding: 15px 32px;
+  display: inline-block;
+  font-size: 16px;
+  margin: auto;
+  background-color: gold;
+  border: 2px solid black;
+  vertical-align: middle;
+}
+
+.shopbtn:hover ,.convertbtn:hover {
+  background: blue;
+}
