--- a/assets/style.css
+++ b/assets/style.css
@@ -156,6 +156,28 @@ width: 100%;
   width: 40px;
   border-radius: 5px;
 }
+#convert{
+  color: black;
+  padding: 15px 32px;
+  display: block;
+  font-size: 16px;
+  margin: auto;
+  background-color: gold;
+  border: 2px solid black;
+  text-align: center;
+
+}
+#save{
+  color: black;
+  padding: 15px 32px;
+  display: block;
+  font-size: 16px;
+  margin: auto;
+  background-color: gold;
+  border: 2px solid black;
+  text-align: center;
+}
+
 .button{
   color: black;
   padding: 15px 32px;
@@ -196,4 +218,13 @@ h2{
   font-weight: bold;
   color: gold;
   font-size: 20px;
+}
+
+#currentHash{
+  font-weight: bold;
+  color: gold;
+  font-size: 20px;
+}
+.button:hover, #save:hover, #convert:hover, .begin:hover {
+  background-color: blue;
 }
