--- a/assets/style.css
+++ b/assets/style.css
@@ -231,3 +231,12 @@ h2{
 .button:hover, #save:hover, #convert:hover, .begin:hover {
   background-color: blue;
 }
+
+#buttonContainer {
+  display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
