--- a/assets/style.css
+++ b/assets/style.css
@@ -115,22 +115,19 @@ html {
   padding: 0px;
 }
 #marquee2{
-height: 125px1;
-width: 100%;
+  height: 600px;
+  width: min-content;
 }
 
 #marquee2 .card {
   margin-bottom: 20px;
+  border-style: groove;
 }
 #twitterContainer {
   font-size: 1.5vw;
 }
 #twitterHeaderIcon {
   padding: 5px;
-}
-
-#marquee2{
-  height: 100px;
 }
 .dogedude {
   width: 400px;
@@ -139,7 +136,10 @@ width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
-
+.asideContainer {
+    display: flex;
+    justify-content: space-evenly;
+}
 .asideContainer p{
     color: black;
 }
